--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 LinkingTo: 
     Rcpp,
-    RcppArmadillo
+    RcppArmadillo,
+    causl,
+    RcppClock
 Imports: 
     Rcpp
